--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - 8080:5432
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=gate
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: gate
     volumes:
       - ./data:/var/lib/postgresql/data
   gate:
@@ -15,3 +15,5 @@ services:
     ports:
       - 8081:80
     image: wood-wood-gate
+    environment:
+      GATE_SECRET: woody_wood_secret
