--- a/.air.toml
+++ b/.air.toml
@@ -1,44 +1,15 @@
 root = "."
-testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = []
-  bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main cmd/main.go"
-  delay = 0
-  exclude_dir = ["node_modules", "assets", "tmp", "vendor", "testdata"]
-  exclude_file = []
-  exclude_regex = ["_test.go"]
-  exclude_unchanged = false
-  follow_symlink = false
-  full_bin = ""
-  include_dir = ["cmd", "views", "pkg"]
-  include_ext = ["go", "html", "gohtml"]
-  include_file = []
-  kill_delay = "0s"
-  log = "build-errors.log"
-  poll = false
-  poll_interval = 0
-  rerun = false
-  rerun_delay = 500
-  send_interrupt = false
-  stop_on_error = false
-
-[color]
-  app = ""
-  build = "yellow"
-  main = "magenta"
-  runner = "green"
-  watcher = "cyan"
-
-[log]
-  main_only = false
-  time = false
-
-[misc]
-  clean_on_exit = false
-
-[screen]
-  clear_on_rebuild = false
-  keep_scroll = true
+pre_cmd = ["cd cmd/db && sqlc generate", "templ generate", "yarn build"]
+cmd = "go build -o ./tmp/main cmd/*.go"
+exclude_dir = ["tmp", "esp32", "node_modules", ".yarn", ".git", "static/css"]
+exclude_regex = ["_test.go", "cmd/db/.*go", "_templ.go"]
+full_bin = "JWT_SECRET=jwt_secret ./tmp/main"
+include_dir = ["cmd", "views", "pkg"]
+include_ext = ["go", "html", "templ", "sql"]
+log = "build-errors.log"
+send_interrupt = true
+stop_on_error = true
+delay = 0
