--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
   db:
     image: postgres
     ports:
-      - 8080:5432
+      - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: gate
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./cmd/db/schema.sql:/docker-entrypoint-initdb.d/init.sql
   gate:
     build: .
     ports:
