--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/cmd/main.go",
+      "cwd": "${workspaceFolder}",
       "env": {
         "JWT_SECRET": "jwt_secret"
       }
