--- a/.air.toml
+++ b/.air.toml
@@ -12,7 +12,7 @@ pre_cmd = [
   "TEMPL_EXPERIMENT=rawgo templ generate",
   "yarn build",
 ]
-cmd = "go build -o ./tmp/main cmd/*.go"
+cmd = "go build -tags=viper_bind_struct -o ./tmp/main cmd/*.go"
 exclude_dir = ["tmp", "esp32", "node_modules", ".yarn", ".git", "static/css"]
 exclude_regex = ["_test.go", "cmd/services/db/.*go", "_templ.go"]
 full_bin = "JWT_SECRET=jwt_secret ./tmp/main"
