--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
       "cwd": "${workspaceFolder}",
       "env": {
         "JWT_SECRET": "jwt_secret"
-      }
+      },
+      "buildFlags": ["-tags=viper_bind_struct"]
     }
   ]
 }
